feat: desenvolvimento endpoint para listar pedidos nao finalizados
