# tooling/swagger/parameters.yaml
@@ -231,28 +231,7 @@ paths:
           description: Erro interno
   /pedido/{id}:
     get:
-      description: Buscar todos os pedidos cadastrados
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/definitions/Pedido'
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-  /pedido/{id}/status-pagamento:
-    get:
-      description: Buscar status de pagamento de um pedido cadastrado
+      description: Buscar um pedido cadastrado
       security:
         - basicAuth: []
       tags: [Pedido]
@@ -260,17 +239,17 @@ paths:
         - application/json
       parameters:
         - name: id
-          description: ID do produto
+          description: ID do pedido
           in: path
           required: true
-          type: string
+          type: string  
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                type: string
+                  $ref: '#/definitions/Pedido'
         '400':
           description: Erro de validação
         '500':
@@ -300,6 +279,31 @@ paths:
           description: Erro de validação
         '500':
           description: Erro interno
+  /pedido/{id}/status-pagamento:
+    get:
+      description: Buscar status de pagamento de um pedido cadastrado
+      security:
+        - basicAuth: []
+      tags: [Pedido]
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          description: ID do produto
+          in: path
+          required: true
+          type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Erro de validação
+        '500':
+          description: Erro interno
   /pedido/item:
     post:
       description: Adicionar item a um pedido
@@ -324,6 +328,27 @@ paths:
       responses:
         '201':
           description: Sucesso
+        '400':
+          description: Erro de validação
+        '500':
+          description: Erro interno
+  /pedido/status/nao-finalizados:
+    get:
+      description: Buscar todos os pedidos retornando eles com a ordenação de status (Pronto, Em preparação, Recebido), ordenados os mais antigos primeiros e desconsiderando os Finalizados
+      security:
+        - basicAuth: []
+      tags: [Pedido]
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/definitions/Pedido'
         '400':
           description: Erro de validação
         '500':
